--- a/dex/values.yaml
+++ b/dex/values.yaml
@@ -66,8 +66,9 @@ envFrom: []
 # -- Additional environment variables passed directly to containers.
 # See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#environment-variables) for details.
 env: 
-   name: KUBERNETES_POD_NAMESPACE
-   value: auth
+{"name":"KUBERNETES_POD_NAMESPACE",
+"value":"auth"}
+
 serviceAccount:
   # -- Enable service account creation.
   create: true
